fix faulty row alignment

--- a/www/css/_misc.scss
+++ b/www/css/_misc.scss
@@ -14,3 +14,9 @@
     color: white;
   }
 }
+
+
+.row{
+  margin-left: 0;
+  margin-right: 0;
+}
